--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,15 @@
             </div>
         </form>
         <hr class="dashed">
+        <form action="/oauth_authorize_pkce" method="POST">
+            <div class="form-field">
+                <label><b>Authorize</b></label>
+            </div>
+            <div class="form-field">
+                <button type="submit">OAuth2 Authorize PKCE</button>
+            </div>
+        </form>
+        <hr class="dashed">
         <form action="/oauth_clientcredentail" method="GET">
             <button type="submit">OAuth2 Client Credentials</button>
         </form>
