Add pkce workflow

--- a/web/index.html
+++ b/web/index.html
@@ -79,6 +79,7 @@
             <div class="form-field">
                 <label>RelayState:</label>
                 <select name="RelayState" id="RelayState">
+                    <option value="/oauth2/ausnudo7fnDpQuqUo0h7/v1/authorize?client_id=0oath1rv8dR26uy2G0h7&idp=0oarzyxcz3wS4w8jn0h7&redirect_uri=http://localhost:3000/oauth_callback_pkce&response_type=code&scope=openid+email+offline_access&nonce=a123456&state=s123456&code_challenge_method=S256&code_challenge=qjrzSW9gMiUgpUvqgEPE4_-8swvyCtfOVvg55o5S_es">PKCE</option>
                     <option value="/oauth2/ausnudo7fnDpQuqUo0h7/v1/authorize?client_id=0oaspaj6ln02ifqtC0h7&idp=0oarzyxcz3wS4w8jn0h7&redirect_uri=http://localhost:3000/oauth_callback&response_type=code&scope=openid+email+offline_access&nonce=a123456&state=s123456">Explicit</option>
                     <option value="/oauth2/ausnudo7fnDpQuqUo0h7/v1/authorize?client_id=0oaspaj6ln02ifqtC0h7&idp=0oarzyxcz3wS4w8jn0h7&redirect_uri=http://localhost:3000/oauth_implicit_callback&response_type=token&scope=openid+email+offline_access&nonce=a123456&state=s123456">Implicit</option>
                 </select>
